--- a/index.html.html
+++ b/index.html.html
@@ -454,7 +454,7 @@
               row.classList.add('error-row');
               const estr = row.cells[0].textContent;
               const label = tableId === 'taula-frequencia' ? 'freqüència'
-                          : tableId === 'taula-eficacia'   ? 'eficàcia'
+                          : tableId === 'taula-eficacia'   ? 'efectivitat'
                           : 'facilitat';
               errors.push(`Si us plau, cal seleccionar la ${label} per a "${estr}".`);
             }
