--- a/index.html.html
+++ b/index.html.html
@@ -156,7 +156,7 @@
 
     <!-- Block 1: Presentació -->
     <div id="block-1" class="question-block active">
-      <div class="question-title">Presentació. Estudi Nacional sobre la gestió de l'ansietat</div>
+      <div class="question-title">Presentació. Estudi autonòmic sobre la gestió de l'ansietat</div>
       <p>Benvingudes i benvinguts:</p>
       <p>Aquest qüestionari té l’objectiu d’identificar quines estratègies d’autogestió de l’ansietat són conegudes per la població adulta catalana, la freqüència d’ús, la percepció d’eficàcia i la facilitat d’implementació percebuda. La informació recollida serà de gran utilitat per a desenvolupar programes de gestió de l'ansietat més eficaços per a la població.</p>
       <p><strong>Durada:</strong> Respondre el qüestionari té una durada aproximada de 15 minuts.</p>
