--- a/newhtml13.html
+++ b/newhtml13.html
@@ -181,7 +181,7 @@
   <!-- Block 1b: Avis si no seleccionat -->
   <div id="block-1b" class="question-block">
     <div class="question-title">Consentiment necessari</div>
-    <p>Per poder continuar amb el qüestionari, és necessari que indiquis si accepts participar.</p>
+    <p>Per poder continuar amb el qüestionari, és necessari que indiquis si acceptes participar.</p>
     <button type="button" class="btn" onclick="prevBlock('1b')">Tornar</button>
   </div>
 
