--- a/newhtml11.html
+++ b/newhtml11.html
@@ -154,7 +154,7 @@
 <body>
     <form id="ansietat-form"
       method="post"
-      action="https://script.google.com/macros/s/AKfycbzGX9Yq7kO_9W7-wOUNOND2m38I_VbkBr0LGvagy4-PWy9I87BU1Zt22ADeF_Eli8gEXQ/exec">
+      action="https://script.google.com/a/macros/uoc.edu/s/AKfycbwvJ8RQOe4-pO0Qps-0G3Tdp7iu-2FHW5rgJ1VuXLP7NdL82W-MsDpNKWoid1VNbMBW/exec">
   <div class="container">
 
     <!-- Block 1: Presentació -->
