--- a/newhtml14.html
+++ b/newhtml14.html
@@ -154,7 +154,7 @@
 <body>
   <form id="ansietat-form"
         method="post"
-        action="https://script.google.com/a/macros/uoc.edu/s/AKfycbwvJ8RQOe4-pO0Qps-0G3Tdp7iu-2FHW5rgJ1VuXLP7NdL82W-MsDpNKWoid1VNbMBW/exec">
+        action="https://script.google.com/macros/s/AKfycbx2P1a_N0-cEXXIEO-R1cT3gSC8WSDzUb30vKHjWt0TRmwZ2NDMy8mRcgp-6TW2uoQr/exec">
     <div class="container">
 
     <!-- Block 1: Presentació -->
